--- a/styles.css
+++ b/styles.css
@@ -226,3 +226,44 @@ nav {
         transform: rotate(0);
     }
 }
+
+.language_img {
+    width: 100%;
+    max-width: 100px;
+    transition: all 300ms;
+}
+.language:hover .language_img {
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(.9);
+}
+.language {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.language_img-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px;
+}
+.language_list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.language_name {
+    position: absolute;
+    bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+    font-size: 20px;
+    opacity: 0;
+}
+.language:hover .language_name {
+    transform: scale(1);
+    opacity: 1;
+  }
